# InventoryEnv

./: Dockerfile  README.md  app.py  environment.py  index.html  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  test_all_tasks.py  test_api.py
server/: __init__.py  app.py
